src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__integration_answered_no_interaction.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 Answered

 What is your name?
