src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__integration_choice_navigate_and_submit.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 ❓ Question

 Choose auth

 ○ JWT  Token-based
