src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__integration_multi_toggle_and_submit.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 Question ──────────────────────────────────────────────────

  Select features
    [✓] Auth
    [✓] API
  > [✓] Logging
  Space: toggle │ Enter: submit │ Esc: cancel
