src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__integration_text_input_full_flow.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 ❓ Question

 What is your name?

 > Alice█
