src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__snapshot_answered_multiline.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 Answered

 What is your name?

 Line 1
 Line 2
