src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__snapshot_choice_active.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 ❓ Question

 Choose auth

 ● JWT  Token-based
