src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__snapshot_multi_active.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 ❓ Question

 Select features

 > [ ] Auth
   [ ] API
   [ ] Logging
