src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__ask_user__tests__snapshot_text_active.snap
---
source: src/tui/widgets/ask_user.rs
expression: snap(&buffer)
---
 Question ────────────────────────────────────────

  What is your name?
  > █ohn Doe
  Enter: submit │ Esc: cancel
